# xs-epi

./: .gitignore  CMakeLists.txt  README.md
primative_types/: 03_reverse_bits.cpp  04_closest_int_same_weight.cpp  05_compute_multiply.cpp  count_bits.cpp  parity.cpp  swap_bits.cpp
